<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SoloSignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:contentDescription="@string"
            app:srcCompat="@android:color/background_dark" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewFirstName"
            android:textAlignment="center"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputfFirstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintFirstName" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textViewLastName"
            android:textAlignment="center"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintLastName" />
        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewSoloEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewEmail"
            android:textAlignment="center"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintEmail" />
        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewSex"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center" >

            <CheckBox
                android:id="@+id/checkBoxMale"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/checkBoxMale"
                android:textAlignment="viewStart" />

            <CheckBox
                android:id="@+id/checkBoxFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBoxFemale"
                android:textAlignment="center" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewBirthDate"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintBirthDate"
            android:inputType="date" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewUsername"
            android:textAlignment="center"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintSUsername" />
        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textViewPassword"
            android:textAlignment="center"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintPassword" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewRepeatPassword"
            android:textAlignment="center"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintRepeatPassword" />
        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/buttonSoloSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSignUp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>
</ScrollView>