<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeamSignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:contentDescription="@string"
            app:srcCompat="@android:color/background_dark" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewTeamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewTeamName"
            android:textAlignment="center"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintTeamName" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewTeamEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewTeamEmail"
            android:textAlignment="center"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintTeamEmail" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewTeamUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewUsername"
            android:textAlignment="center"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintTeamUsername" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewTeamPassword"
            android:textAlignment="center"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintPassword" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewRepeatPassword"
            android:textAlignment="center"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintRepeatPassword" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/buttonTeamSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSignUp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
    </LinearLayout>
</ScrollView>